--- a/css/style.scss
+++ b/css/style.scss
@@ -846,11 +846,12 @@ span.date {
 						margin-right: 20px;
 
 						img {
-							margin-right: 8px;
+							margin-right: 5px;
 						}
 
 						span {
 							font-size: 14px;
+							color: $color_06;
 						}
 					}
 
@@ -881,19 +882,52 @@ span.date {
 		.storeinfo_tab_cnt {
 
 			.content {
-				padding: 45px 0 60px 0;
+				padding: 45px 0;
 
 				&.store_detail {
-					> .row {
-						
-						> div {
-							h4 {
-								font-size: 14px;
-								margin-bottom: 20px;
+					.list {
+						margin-bottom: 50px;
+
+						.title {
+							@include display_varible($justify-content: flex-start);
+							font-size: 14px;
+							color: $color_06;
+							margin-bottom: 15px;
+
+							img {
+								margin-right: 3px;
 							}
-							margin-bottom: 60px;
 						}
 
+						.cnt {
+							color: $color_05;
+
+							ul {
+								li {
+									@include display_varible;
+									margin-bottom: 10px;
+
+									span {
+										width: 30%;
+										color: $color_03;
+									}
+									p {
+										width: 70%;
+									}
+
+								}
+
+							}
+
+							p {
+								margin-bottom: 10px;
+
+								img {
+									margin-left: 5px;
+									cursor: pointer;
+								}
+							}
+						}
 					}
 				}
 			}
@@ -1944,31 +1978,51 @@ span.date {
 	}
 }
 
-.product_purchase {
+
+/* bottom_button */
+.bottom_button {
 	position: relative;
 	position: fixed;
 	left: 0; bottom: 0;
-	width: 100%; height: 90px;
+	width: 100%; height: auto;
 	background-color: #ffffff;
 	border-top: 1px solid $color_01;
 	box-sizing: border-box;
-	padding: 10px 12px 0 52px;
+	padding: 10px 0px 50px 0px;
 	z-index: 15;
 
-	.like_btn {
-		width: 40px; height: 45px;
-		@include display_varible;
-		position: absolute;
-		top: 10px; left: 12px;
+	.sum {
+		text-align: center;
+		font-size: 11px;
+		color: $color_06;
+		margin-bottom: 10px;
+
+		strong {
+			font-size: 13px;
+		}
 	}
 
-	button {
-		width: 100%; height: 40px;
-		border-radius: 5px;
-		background-color: $maincolor;
-		color: #ffffff;
-		font-weight: 700;
+
+	.purchase {
+		position: relative; height: 45px;
+		padding-left: 50px;
+		.like_btn {
+			width: 40px; height: 45px;
+			@include display_varible;
+			position: absolute;
+			top: 0px; left: 12px;
+		}
+	
 	}
+}
+
+// 버튼 스타일
+.btn_style_02 {
+	width: 100%; height: 45px;
+	border-radius: 5px;
+	background-color: $maincolor;
+	color: #ffffff;
+	font-weight: 700;
 }
 
 
@@ -2165,6 +2219,7 @@ span.date {
 	position: relative;
 	font-size: 0;
 	> label {
+		position: relative;
 		width: 100%; height: auto;
 		display: block;
 		box-sizing: border-box;
@@ -2184,43 +2239,6 @@ span.date {
 		background-color: none;
 	}
 }
-
-
-.page_bottom_btn {
-	position: fixed;
-	left: 0; bottom: 0;
-	width: 100%;
-	padding-top: 10px;
-	padding-bottom: 40px;
-	background-color: #ffffff;
-	border-top: 1px solid #e3e3e3;
-	box-sizing: border-box;
-
-	.sum {
-		text-align: center;
-		font-size: 11px;
-		color: $color_06;
-		margin-bottom: 10px;
-
-		strong {
-			font-size: 13px;
-		}
-	}
-
-
-	button {
-		width: 100%; height: 45px;
-		background-color: $maincolor;
-		border-radius: 5px;
-		color: #ffffff;
-		font-size: 14px;
-		font-weight: 700;
-	}
-}
-
-
-
-
 
 
 
@@ -2273,7 +2291,6 @@ span.date {
 		border-top: 1px solid #eeeeee;
 		padding-top: 10px;
 		padding-left: 58px;
-		height: 45px;
 
 		.profile_img {
 			position: absolute;
@@ -2729,7 +2746,7 @@ span.date {
 
 
 .join_wrap {
-	width: 100%; height: 100vh;
+	width: 100%; height: 100%;
 	background-color: #ffffff;
 	padding-top: 40px;
 	box-sizing: border-box;
@@ -2911,24 +2928,25 @@ span.date {
 
 		textarea {
 			height: 100px;
-			padding: 1rem 1rem 1rem 1rem;
+			padding: 0.6rem 1rem 0.6rem 1rem;
 		}
 	}
 
-	.btn_wrap {
-		@include display_varible($justify-content: space-between);
+}
 
-		button {
-			width: 49%; height: 40px;
-			line-height: 35px;
-			@include display_varible;
-			border-radius: 5px;
-			background-color: #F1F1F1;
-			&.complete {
-				background-color: #FE354D;
-				color: #ffffff;
-				font-weight: 700;
-			}
+.bottom_btn_wrap {
+	@include display_varible($justify-content: space-between);
+
+	button {
+		width: 49%; height: 45px;
+		line-height: 35px;
+		@include display_varible;
+		border-radius: 5px;
+		background-color: #F1F1F1;
+		&.complete {
+			background-color: #FE354D;
+			color: #ffffff;
+			font-weight: 700;
 		}
 	}
 }
@@ -3173,6 +3191,7 @@ span.date {
 						border: 1px solid #eeeeee;
 						border-radius: 5px;
 						overflow: hidden;
+						margin-bottom: 10px;
 
 						.user_info {
 							> span {
@@ -3364,6 +3383,57 @@ span.date {
 
 
 
+
+/* 문의팝업 */
+.slide_popup {
+	position: fixed;
+	width: 100%; height: 95%;
+	background-color: #ffffff;
+	left: 0; bottom: 0;
+	z-index: 20;
+	border: 1px solid #000000;
+	border-top-left-radius: 30px;
+	border-top-right-radius: 30px;
+	box-sizing: border-box;
+	overflow: hidden;
+
+	.tit {
+		position: relative;
+		width: 100%; height: 50px;
+		line-height: 50px;
+		font-size: 15px;
+		box-sizing: border-box;
+		border-bottom: 1px solid #e3e3e3;
+
+		.close_btn {
+			@include position_var($left: auto);
+			right: 14px;
+		}
+	}
+
+	textarea {
+		width: 100%; height: 155px;
+		margin: 32px 0 12px 0;
+	}
+
+	.checkbox_wrap p {
+		color: $color_03;
+	}
+
+	.bottom_btn_wrap {
+		position: absolute;
+		left: 0; bottom: 0; right: 0;
+		width: 100%;
+		box-sizing: border-box;
+		padding: 10px 14px 52px 14px;
+		border-top: 1px solid #eeeeee;
+
+		.complete {
+			font-weight: 400;
+		}
+	}
+
+}
 
 
 
