--- a/css/style.scss
+++ b/css/style.scss
@@ -180,7 +180,7 @@ $color_06: #313131;
 				span {
 					margin-top: 5px;
 					color: $color_02;
-					font-size: 10px;
+					font-size: 11px;
 				}
 
 			}
@@ -371,6 +371,11 @@ span.date {
 		font-weight: 700;
 		padding: 0 12px 15px 12px;
 	}
+
+	&:last-child {
+		padding: 25px 0 100px 0;
+	}
+
 }
 
 .main_live_cnt {
