--- a/css/common.css
+++ b/css/common.css
@@ -172,6 +172,11 @@ label{
     cursor:pointer
 }
 
+h6 {
+    font-size: 13px;
+    font-weight: 700;
+}
+
 
 /* IR 효과 */
 .ir_pm {display:block; overflow:hidden; font-size:0; line-height:0; text-indent:-9999px;} /* 의미있는 이미지의 대체 텍스트를 제공하는 경우(Phark Method) */
@@ -276,7 +281,7 @@ input[type="checkbox"] + label > div > i {
 }
 .default_type::placeholder {
 	font-size: 13px;
-	color: #cccccc;
+	color: #9e9e9e;
 }
 
 button {
@@ -291,6 +296,7 @@ button.btn {
     font-size: 14px;
     font-weight: 700;
     border-radius: 5px;
+}
 
 
 
